// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can be queried for a single conversation and its messages 1`] = `
Object {
  "data": Object {
    "conversation": Object {
      "messages": Array [
        Object {
          "author": Object {
            "id": "12345",
            "name": "John S.",
          },
          "body": "Not much!",
          "sentAt": 1504659549251,
        },
        Object {
          "author": Object {
            "id": "23456",
            "name": "Jane D.",
          },
          "body": "Whatsup?",
          "sentAt": 1504659489251,
        },
        Object {
          "author": Object {
            "id": "12345",
            "name": "John S.",
          },
          "body": "Hello!",
          "sentAt": 1504659429251,
        },
      ],
      "participants": Array [
        Object {
          "id": "12345",
          "name": "John S.",
        },
        Object {
          "id": "23456",
          "name": "Jane D.",
        },
      ],
    },
    "currentUser": Object {
      "id": "12345",
    },
  },
}
`;

exports[`can be queried for the current user's conversations 1`] = `
Object {
  "data": Object {
    "conversations": Array [
      Object {
        "messages": Array [
          Object {
            "author": Object {
              "name": "John S.",
            },
            "body": "Not much!",
            "sentAt": 1504659549251,
          },
        ],
        "participants": Array [
          Object {
            "id": "12345",
            "name": "John S.",
          },
          Object {
            "id": "23456",
            "name": "Jane D.",
          },
        ],
      },
    ],
    "currentUser": Object {
      "id": "12345",
    },
  },
}
`;
